--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
     </div>
     <div id="onboarding-overlay" class="hidden"></div>
     <div id="onboarding-tooltip" class="hidden">
+        <div id="onboarding-progress-container">
+            <div id="onboarding-progress-bar"></div>
+        </div>
+        <h3 id="onboarding-tooltip-title"></h3>
         <div id="onboarding-tooltip-content"></div>
         <div id="onboarding-tooltip-actions">
             <button id="onboarding-action-primary" class="button"></button>
