--- a/index.html
+++ b/index.html
@@ -175,7 +175,10 @@
                 </div>
             </div>
             <div class="popout-separator"></div>
-            <button id="triggerMutationButton" class="button">Mutate</button>
+            <div class="form-group-buttons">
+                <button id="triggerMutationButton" class="button">Mutate</button>
+                <button id="cloneAndMutateButton" class="button">Clone & Mutate Others</button>
+            </div>
         </div>
         <div id="setHexPopout" class="popout-panel hidden" data-tour-id="set-hex-popout">
             <h4>Set/Copy Ruleset Hex</h4>
