--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <div id="mutatePopout" class="popout-panel hidden">
             <h4>Mutate Ruleset</h4>
             <div class="form-group">
-                <label for="mutationRateSlider">Mutation Amount:</label>
+                <label for="mutationRateSlider">Mutation Rate:</label>
                 <div id="mutationRateSliderMount"></div>
             </div>
             <div class="form-group">
