--- a/index.html
+++ b/index.html
@@ -261,6 +261,11 @@
                     </label>
                 </div>
             </div>
+            <div class="form-group">
+                <label for="showMinimapOverlayDesktop" class="checkbox-label" style="display:inline-flex; align-items:center; gap: 8px;">
+                    <input type="checkbox" name="showMinimapOverlay" id="showMinimapOverlayDesktop" checked> Show Minimap Overlays
+                </label>
+            </div>
         </div>
 
         <div id="historyPopout" class="popout-panel hidden">
