--- a/index.html
+++ b/index.html
@@ -97,30 +97,30 @@
         <div id="main-content-area" data-tour-id="main-content-area">
             <div id="vertical-toolbar" role="toolbar" aria-label="Main controls">
                 <button id="playPauseButton" class="toolbar-button" title="[P]lay/Pause Simulation" data-tour-id="play-pause-button">▶</button>
-                <button id="speedControlButton" class="toolbar-button" title="Adjust Speed" data-tour-id="speed-control-button">SPD</button>
-                <button id="brushToolButton" class="toolbar-button" title="Brush Tool / Adjust Size" data-tour-id="brush-tool-button">BRS</button>
+                <button id="speedControlButton" class="toolbar-button" title="Adjust Speed" data-tour-id="speed-control-button">⏩</button>
+                <button id="brushToolButton" class="toolbar-button" title="Brush Tool / Adjust Size" data-tour-id="brush-tool-button">🖌️</button>
                 <div class="toolbar-separator" role="separator"></div>
 
-                <button id="newRulesButton" class="toolbar-button" title="[N]ew Ruleset Options" data-tour-id="new-rules-button">NEW</button> 
-                <button id="mutateButton" class="toolbar-button" title="Mutate Ruleset" data-tour-id="mutate-button">MUT</button>
-                <button id="setRulesetButton" class="toolbar-button" title="Set/Copy Ruleset Hex" data-tour-id="set-ruleset-button">HEX</button>
-                <button id="libraryButton" class="toolbar-button" title="Content Library" data-tour-id="library-button">LIB</button>
+                <button id="newRulesButton" class="toolbar-button" title="[N]ew Ruleset Options" data-tour-id="new-rules-button">✨</button> 
+                <button id="mutateButton" class="toolbar-button" title="Mutate Ruleset" data-tour-id="mutate-button">🧬</button>
+                <button id="setRulesetButton" class="toolbar-button" title="Set/Copy Ruleset Hex" data-tour-id="set-ruleset-button">#️⃣</button>
+                <button id="libraryButton" class="toolbar-button" title="Content Library" data-tour-id="library-button">📚</button>
                 <div class="toolbar-separator" role="separator"></div>
 
-                <button id="resetClearButton" class="toolbar-button" title="Reset/Clear Worlds" data-tour-id="reset-clear-button">R/C</button>
+                <button id="resetClearButton" class="toolbar-button" title="Reset/Clear Worlds" data-tour-id="reset-clear-button">🔄</button>
                 <div class="toolbar-separator" role="separator"></div>
 
-                <button id="editRuleButton" class="toolbar-button" title="[E]dit Ruleset Panel" data-tour-id="edit-rule-button">EDT</button> 
-                <button id="setupPanelButton" class="toolbar-button" title="[S]etup Worlds Panel" data-tour-id="setup-panel-button">SET</button> 
-                <button id="analysisPanelButton" class="toolbar-button" title="[A]nalysis Panel" data-tour-id="analysis-panel-button">ANL</button>
-                <button id="rankPanelButton" class="toolbar-button" title="Rule Rank Panel" data-tour-id="rank-panel-button">RNK</button>
+                <button id="editRuleButton" class="toolbar-button" title="[E]dit Ruleset Panel" data-tour-id="edit-rule-button">📝</button> 
+                <button id="setupPanelButton" class="toolbar-button" title="[S]etup Worlds Panel" data-tour-id="setup-panel-button">🌐</button> 
+                <button id="analysisPanelButton" class="toolbar-button" title="[A]nalysis Panel" data-tour-id="analysis-panel-button">📈</button>
+                <button id="rankPanelButton" class="toolbar-button" title="Rule Rank Panel" data-tour-id="rank-panel-button">🏆</button>
                 <div class="toolbar-separator" role="separator"></div>
 
-                <button id="saveStateButton" class="toolbar-button" title="Save Selected World State" data-tour-id="save-state-button">SAV</button>
-                <button id="loadStateButton" class="toolbar-button" title="Load World State" data-tour-id="load-state-button">LOD</button>
-                <button id="shareButton" class="toolbar-button" title="Share Setup" data-tour-id="share-button">SHR</button>
+                <button id="saveStateButton" class="toolbar-button" title="Save Selected World State" data-tour-id="save-state-button">💾</button>
+                <button id="loadStateButton" class="toolbar-button" title="Load World State" data-tour-id="load-state-button">📂</button>
+                <button id="shareButton" class="toolbar-button" title="Share Setup" data-tour-id="share-button">🔗</button>
                 <button id="settingsButton" class="toolbar-button" title="Settings">⚙️</button>
-                <button id="helpButton" class="toolbar-button" title="Help">HLP</button>
+                <button id="helpButton" class="toolbar-button" title="Help">❓</button>
             </div>
             <canvas id="hexGridCanvas" aria-label="Hexagonal cellular automaton simulation display" data-tour-id="hex-grid-canvas">
             </canvas>
